<resources>

    <!--Login Activity Strings-->
    <string name="app_name">LimberUP</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_pass">Forgot Your Password?</string>
    <string name="login_no_account">Don\'t have an account</string>
    <string name="login_sign_in_button">Log in</string>
    <string name="login_logo">Logo Image</string>
    <string name="login_bg">Background Image</string>
    <string name="activity_search_button">Find Your Activity</string>


    <!--Registration Activity Strings-->
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_bio">Bio</string>
    <string name="register_interests">Interests</string>
    <string name="register_sign_up_button">Sign Up</string>
    <string name="preference_file_key">token_id</string>
    <string name="register_back_button">Back</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_core">Map</string>

    <!--Activity Categories Strings-->
    <string name="category_create_activity_hint">Cannot find your Activity? Create One</string>
    <string name="category_create_activity">Create Activity</string>
    <string name="category_football">Football</string>
    <string name="category_basketball">Basketball</string>
    <string name="category_tennis">Tennis</string>
    <string name="category_cricket">Cricket</string>
    <string name="category_golf">Golf</string>
    <string name="category_volleyball">Volleyball</string>
    <string name="category_swimming">Swimming</string>
    <string name="category_other">Other</string>

    <!--Events Strings-->
    <string name="event_player_number">Number Of Players:<p> </p></string>
    <string name="event_location">Location: <p> </p></string>
    <string name="event_player_limit">Player Limit: <p> </p></string>
    <string name="events_upcoming_events_txt">Upcoming Events</string>

    <!--Event Create -->
    <string name="event_create_event_name">Event Name</string>
    <string name="event_create_min_player_number">Min Number of Players</string>
    <string name="event_create_location">Location</string>
    <string name="event_create_player_limit">Player Limit</string>
    <string name="event_create_category">Category</string>
    <string name="event_create_date">Date</string>
    <string name="event_create_time">Time</string>

    <string name="event_create_create_button">Create</string>
    <string name="event_create_back_button">Back</string>


    <!--Location Permission Strings -->
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">In order to use map functionality confirm that you would like us to use your location.</string>
    <string name="ok">OK</string>


    <string-array name="country_activities">
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Cricket</item>
        <item>Golf</item>
        <item>Volleyball</item>
        <item>Swimming</item>
        <item>Other</item>
    </string-array>

    <!--Nav Menu Strings-->
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LimberUP</string>
    <string name="nav_header_subtitle">A Group16 application</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_map_dashboard">Map</string>


    <!--Camera Choosing-->
    <string name="pick_device">Pick the place from where image will be retrieved.</string>
    <string-array name="device_type">
        <item>Camera</item>
        <item>Storage</item>
    </string-array>

</resources>
