<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_fitness_center_black_24dp"
            android:title="@string/menu_activities" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_near_me_black_24dp"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_keyboard_backspace_black_24dp"
            android:title="@string/menu_sign_out" />

    </group>

</menu>
