<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/username_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/interests_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_interests"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/bio_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_bio"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_sign_up_button" />
</LinearLayout>