<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_create_event_name"
            android:textStyle="bold"
            android:textColor="#000" />
        <EditText
            android:id="@+id/create_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_input_bg_search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_create_player_number"
            android:textStyle="bold"
            android:textColor="#000"/>


        <EditText
            android:id="@+id/create_event_player_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/text_input_bg_search"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_create_location"
            android:textStyle="bold"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"

            android:background="@drawable/text_input_bg_search"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp" >
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_create_category"
            android:textStyle="bold"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_input_bg_search">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"/>
        </LinearLayout>

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_create_player_limit"
            android:textColor="#000"
            android:textStyle="bold">


        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_input_bg_search"
            android:ems="10"
            android:inputType="textPersonName"

            android:padding="5dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_create_time"
                        android:textStyle="bold"
                        android:textColor="#000"/>


                    <EditText
                        android:id="@+id/editText8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:padding="5dp"

                        android:background="@drawable/text_input_bg_search"
                        android:inputType="time" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/event_create_date"
                    android:textStyle="bold"
                    android:textColor="#000"/>

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/text_input_bg_search"
                    android:ems="10"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:inputType="date" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">
                <Button
                    android:id="@+id/button4"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg_login"
                    android:textColor="#fff"
                    android:text="@string/event_create_create_button"
                    android:layout_marginRight="20dp"/>
                <Button
                    android:id="@+id/button2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg_back"
                    android:textColor="#fff"
                    android:layout_marginLeft="20dp"
                    android:text="@string/event_create_back_button"
                    />
        </LinearLayout>
</LinearLayout>