<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/circled_border_events_bg"
    android:padding="10dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="LOUIS'S 5-side"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:30"
        android:textColor="#000"
        android:textSize="28sp"
        android:textStyle="bold"/>

</LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_player_number"
                android:textSize="18sp"
                android:textColor="#FFF"

                android:textStyle="bold"/>

            <TextView
                android:id="@+id/event_player_number"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="10"
                android:textColor="#C0BEBE"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/event_location"
                android:textColor="#FFF"

                android:textStyle="bold"/>

            <TextView
                android:id="@+id/event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Surrey Sports Park, Richard Meyjes Rd, Guildford"
                android:textColor="#C0BEBE"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#FFF"

                android:text="@string/event_player_limit"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/event_player_limit"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="28"
                android:textColor="#C0BEBE"
                android:textStyle="bold"/>
        </LinearLayout>

</LinearLayout>